# ferredge

./: ARCH.md  Cargo.toml  README.md
crates/ferredge-app/: Cargo.toml
crates/ferredge-core/: Cargo.toml
crates/ferredge-core/src/: bridge.rs  command.rs  device.rs  driver.rs  error.rs  event.rs  lib.rs  message.rs  router.rs  storage.rs  types.rs
crates/ferredge-ffi/: Cargo.toml
crates/ferredge-ffi/src/: client.rs  error.rs  lib.rs
crates/ferredge-proto-http/: Cargo.toml
crates/ferredge-proto-http/src/: attributes.rs  handler.rs  lib.rs
crates/ferredge-sdk/: Cargo.toml
crates/ferredge-sdk/src/: client.rs  error.rs  lib.rs
