[workspace]
resolver = "2"
members = [
    "crates/ferredge-core",
    "crates/ferredge-proto-http",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ferredge/ferredge"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
ferredge-core = { path = "crates/ferredge-core" }
ferredge-proto-http = { path = "crates/ferredge-proto-http" }

# Serialization
serde = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Unique identifiers
uuid = { version = "1", features = ["v4", "serde"] }
