[package]
name = "ferredge-core"
description = "Core library for ferredge - device and data aggregator for edge devices"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["rt"]

# Runtime features
rt = ["tokio/rt"]
rt-multi = ["tokio/rt-multi-thread"]

# Storage backends
storage-sqlite = []
storage-timescale = []
storage-influx = []
storage-parquet = []

# Protocol support (to be implemented)
proto-mqtt = []
proto-http = []
proto-modbus = []
proto-coap = []
proto-opcua = []

[dependencies]
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1.89"
futures = "0.3.31"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
