[package]
name = "ferredge-core"
description = "Core library for ferredge - device and data aggregator for edge devices"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
std = ["serde/std", "bitflags/std"]

[dependencies]
serde = { workspace = true }
bitflags = { version = "2.10.0", features = ["serde"] }

[dev-dependencies]
