[package]
name = "ferredge-ffi"
description = "C FFI bindings for ferredge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = []

[dependencies]
ferredge-core = { workspace = true }
ferredge-sdk = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
# For generating C headers (optional, can use cbindgen)
