[package]
name = "ferredge-proto-http"
description = "HTTP protocol support for ferredge - device and data aggregator for edge devices"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["serde/std", "httparse/std", "ferredge-core/std"]

[dependencies]
httparse = { version = "1.10.1", default-features = false }
serde = { workspace = true }
ferredge-core = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
